- added reading capabilities for partial solutions with extension *.mst
- new heuristic that tries to complete partial solutions
- new global shift off all random seeds (randomization/randomseedshift) and unification of all existing random seeds
- use new macros SCIPdebugMsg/SCIPsetDebugMsg/SCIPstatDebugMsg at all places where it makes sense
- new random number gerator in random.{c,h}

parameters:
- new parameter "solvingphases/enabled" to activate adaptive behavior during the solution process; several further parameters
  in the solvingphases-section to control how to switch the parameters, and whether a restart should be performed between the phases.
- new parameter misc/referencevalue to pass a reference value for further analysis of the tree search, see also in 'features'
- new parameter sepaperspective to turn on separation of perspective cuts for indicator contraints
- new parameter sepapersplocal to decide whether local cuts can be used for perspective cuts for indicator contraints
- new parameter branching/relpscost/usesmallweightsitlim to use smaller weights for pseudo cost updates when LP iteration limit was hit
- new parameter class randomization
- moved permutationseed from misc to randomization
- new parameter randomization/lpseed to set the initial seed of the LP solver
- setting a value for a fixed parameter will no longer return with an error, if the new value equals the one to which the parameter is fixed

performance improvements:
- improved greedy solution in SCIPsolveKnapsackApproximatelyLT() for the flow cover separation
- adjusted most Large Neighborhood Search heuristics such that they collect their variable fixings first in an array,
  and only create and populate a sub-SCIP if enough variables will be fixed.
- SCIP supports constraint compression for problem copies; constraint compression denotes the immediate
  removal of fixed variables from constraint data at creation time to reduce memory requirements.