@@ -100,9 +100,10 @@ void* SCIPlpiGetSolverPointer(
 
 /** pass integrality information about variables to the solver */
 EXTERN
-void SCIPlpiSetIntegralityInformation(
-   SCIP_LPI*             lpi,
-   int*                  intInfo
+SCIP_RETCODE SCIPlpiSetIntegralityInformation(
+   SCIP_LPI*             lpi,                /**< pointer to an LP interface structure */
+   int                   nvars,              /**< length of integrality array */
+   int*                  intInfo             /**< integrality array (0: continuous, 1: integer) */
    );
 
 /**@} */
