@@ -22,6 +22,7 @@ features:
 - new global shift off all random seeds (randomization/randomseedshift) and unification of all existing random seeds
 - use new macros SCIPdebugMsg/SCIPsetDebugMsg/SCIPstatDebugMsg at all places where it makes sense
 - new random number gerator in random.{c,h}
+- new feature solution polishing to improve fractionality of LP solutions
 
 parameters:
 - new parameter "solvingphases/enabled" to activate adaptive behavior during the solution process; several further parameters
@@ -34,6 +35,7 @@ parameters:
 - moved permutationseed from misc to randomization
 - new parameter randomization/lpseed to set the initial seed of the LP solver
 - setting a value for a fixed parameter will no longer return with an error, if the new value equals the one to which the parameter is fixed
+- new parameter lp/solutionpolishing to enable LP polishing only at the root LP or always
 
 performance improvements:
 - improved greedy solution in SCIPsolveKnapsackApproximatelyLT() for the flow cover separation
@@ -72,6 +74,7 @@ interface:
 - methods SCIPrandomGet{Int,Real}() substitutes SCIPgetRandom{Int,Real}() (marked to be depricated)
 - methods SCIPrandomPermute{Int}Array() substitutes SCIPpermuteRandom{Int}Array() (marked to be depricated)
 - method SCIPrandomGetSubset() substitutes SCIPgetRandomSubset() (marked to be depricated)
+- new method SCIPlpiSetIntegralityInformation() to improve SoPlex' solution polishing 
 
 fixed bugs:
 
